--- a/Python Web Basics/11_workshop_part_two/petstagram/templates/pets/pet-details-page.html
+++ b/Python Web Basics/11_workshop_part_two/petstagram/templates/pets/pet-details-page.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block content %}
 
+{% block content %}
     <div class="pet-profile">
         <!-- Start Pet Personal Data Section -->
         <div class="profile">
@@ -9,26 +9,26 @@
                 <div class="profile_img">
                     <div class="image">
                         <!-- Pet URL Image -->
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTgoIHq82qLYnvomfz5ZkW5CLQ8VNxCyI-hUw&usqp=CAU"
+                        <img src="{{ pet.personal_photo }}"
                              alt="img8">
                     </div>
                 </div>
                 <div class="personal">
                     <div class="edit">
                         <!-- Pet Name -->
-                        <p>Sasho</p>
+                        <p>{{ pet.name }}o</p>
                         <!-- Pet Edit Button -->
-                        <a href="">
+                        <a href="{% url 'pet edit' 'username' pet.slug %}">
                             <img class="edit-img" src="{% static 'images/edit-pen-icon-6.jpg' %}" alt="edit button">
                         </a>
                         <!-- Pet Delete Button -->
-                        <a href="">
+                        <a href="{% url 'pet delete' 'username' pet.slug %}">
                             <img class="bin-img" src="{% static 'images/icon-remove-22.jpg' %}" alt="bin button">
                         </a>
                     </div>
                     <div class="data">
                         <!-- Pet Total Photos -->
-                        <span>4</span>
+                        <span>{{ all_photos.count }}</span>
                         <p>photos</p>
                     </div>
                 </div>
@@ -39,14 +39,13 @@
         <div class="pet-posts">
 
             <!-- IF Photos Start Pet Photos Post Section -->
-
-            {% include 'common/pets-photos.html' %}
-
-            <!-- IF Photos End Pet Photos Post Section -->
-
-            <!-- IF NOT Photos Show No Post Image -->
-            <img class="no-posts" src="{% static 'images/no_posts.png' %}" alt="no posts image">
-
+            {% if all_photos %}
+                {% include 'common/pets-photos.html' %}
+                <!-- IF Photos End Pet Photos Post Section -->
+            {% else %}
+                <!-- IF NOT Photos Show No Post Image -->
+                <img class="no-posts" src="{% static 'images/no_posts.png' %}" alt="no posts image">
+            {% endif %}
         </div>
     </div>
 {% endblock %}
