--- a/Python Web Basics/14_workshop_part_three/petstagram/templates/common/home-page.html
+++ b/Python Web Basics/14_workshop_part_three/petstagram/templates/common/home-page.html
@@ -5,8 +5,10 @@
         <div class="col-9">
 
             <!-- Start Searchbar Form -->
-            <form class="searchbar" method="post">
-                <input type="text" placeholder="Search by pet name...">
+            <form class="searchbar" method="GET" action="{% url 'index' %}">
+                {% csrf_token %}
+                {{ search_form }}
+{#                <input type="text" placeholder="Search by pet name...">#}
                 <button>
                     <img src="{% static 'images/search.png' %}" height="18" alt="img2">
                 </button>
