--- a/Python Web Basics/14_workshop_part_three/petstagram/templates/common/pets-photos.html
+++ b/Python Web Basics/14_workshop_part_three/petstagram/templates/common/pets-photos.html
@@ -38,7 +38,7 @@
 
         <!-- Start Pet Photo -->
         <div class="imgBx" id="{{ photo.id }}">
-            <img src="{% static 'images/axolotl.jpeg' %}" alt="post" class="cover">
+            <img src="media/{{ photo.photo }}" alt="post" class="cover">
         </div>
         <!-- End Pet Photo -->
 
@@ -136,7 +136,33 @@
 
             <!-- Date of Publication -->
             <h5 class="postTime">{{ photo.date_of_publication}}</h5>
-
+            {% for comment in photo.comment_set.all %}
+                    <div class="comments">
+                        <div class="top">
+                            <div class="userDetails">
+                                <div class="comment-data">
+                                    <div class="profilepic">
+                                        <div class="profile_img">
+                                            <div class="image">
+                                                <!-- User Profile Image -->
+                                                <img src="{% static 'images/person.png' %}" alt="img8">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <p>
+                                        <!-- Link to User Profile Details Page-->
+                                        <!-- User First and/or Last Name or username-->
+                                        <a href="">Steven Ivanov</a>
+                                        <!-- User Comment -->
+                                        {{ comment.comment_text }}
+                                    </p>
+                                </div>
+                                <span>{{ comment.date_time_of_publication}}</span>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- End Comments Section -->
+                {% endfor %}
             <!-- Start Add Comments Section -->
             <div class="addComments">
                 <div class="reaction">
@@ -145,10 +171,12 @@
                     </h3>
                 </div>
                 <!-- Start Add Comments Form -->
-                <form method="post" action="#">
-                    <label for="id_body">Body:</label>
-                    <textarea name="body" cols="40" rows="10" placeholder="Add comment..." maxlength="300"
-                              required="" id="id_body"></textarea>
+                <form method="POST" action="{% url 'comment' photo_id=photo.pk %}">
+                    {% csrf_token %}
+                    {{ comment_form }}
+{#                    <label for="id_body">Body:</label>#}
+{#                    <textarea name="body" cols="40" rows="10" placeholder="Add comment..." maxlength="300"#}
+{#                              required="" id="id_body"></textarea>#}
                     <button type="submit">Post</button>
                 </form>
                 <!-- End Add Comments Form -->
