--- a/Python Web Basics/14_workshop_part_three/petstagram/templates/pets/pet-details-page.html
+++ b/Python Web Basics/14_workshop_part_three/petstagram/templates/pets/pet-details-page.html
@@ -16,7 +16,7 @@
                 <div class="personal">
                     <div class="edit">
                         <!-- Pet Name -->
-                        <p>{{ pet.name }}o</p>
+                        <p>{{ pet.name }}</p>
                         <!-- Pet Edit Button -->
                         <a href="{% url 'pet edit' 'username' pet.slug %}">
                             <img class="edit-img" src="{% static 'images/edit-pen-icon-6.jpg' %}" alt="edit button">
