--- a/Python Web Basics/14_workshop_part_three/petstagram/templates/photos/photo-details-page.html
+++ b/Python Web Basics/14_workshop_part_three/petstagram/templates/photos/photo-details-page.html
@@ -47,7 +47,7 @@
                                 </a>
 
                                 <!-- Link to Delete Pet Photo Page -->
-                                <a href="#">
+                                <a href="{% url 'photo delete' pk=photo.pk %}">
                                     <img class="bin-img" src="{% static 'images/icon-remove-22.jpg' %}" alt="bin button">
                                 </a>
                             </div>
@@ -62,7 +62,7 @@
                 <!-- Start Pet Photo -->
                 <div class="imgBx" id="place the id of the photo here">
                     <!-- Pet Photo -->
-                    <img src="{% static 'images/axolotl.jpeg' %}" alt="post" class="cover">
+                    <img src="/media/{{ photo.photo }}" alt="post" class="cover">
                 </div>
                 <!-- End Pet Photo -->
 
@@ -200,10 +200,9 @@
                     </div>
 
                     <!-- Start Add Comments Form -->
-                    <form method="post" action="#">
-                        <label for="id_body">Body:</label>
-                        <textarea name="body" cols="40" rows="10" placeholder="Add comment..." maxlength="300"
-                                  required="" id="id_body"></textarea>
+                    <form method="POST" action="{% url 'comment' photo_id=photo.pk %}">
+                    {% csrf_token %}
+                    {{ comment_form }}
                         <!-- Post Comments Button -->
                         <button type="submit">Post</button>
                     </form>
