--- a/Python Web Framework/workshop/petstagram/templates/accounts/login-page.html
+++ b/Python Web Framework/workshop/petstagram/templates/accounts/login-page.html
@@ -7,15 +7,19 @@
             <h1>Petstagram</h1>
 
             <!-- Start Login Form-->
-            <form action="#">
-                <p>
-                    <label for="id_username">Username:</label>
-                    <input type="text" placeholder="Username">
-                </p>
-                <p>
-                    <label for="id_password">Password:</label>
-                    <input type="password" placeholder="Password">
-                </p>
+            <form action="{% url 'login user' %}" method="POST">
+                {% csrf_token %}
+                {{ form.username }}
+                {{ form.password }}
+                <input type="hidden" value="{{ next }}" name="next">
+{#                <p>#}
+{#                    <label for="id_username">Username:</label>#}
+{#                    <input type="text" placeholder="Username">#}
+{#                </p>#}
+{#                <p>#}
+{#                    <label for="id_password">Password:</label>#}
+{#                    <input type="password" placeholder="Password">#}
+{#                </p>#}
 
                 <!-- Login Button-->
                 <button type="submit">Log in</button>
