--- a/Python Web Framework/workshop/petstagram/templates/accounts/register-page.html
+++ b/Python Web Framework/workshop/petstagram/templates/accounts/register-page.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load forms %}
 {% block content %}
 
     <!-- Start Register Section -->
@@ -7,17 +8,27 @@
             <h1>Petstagram</h1>
 
             <!-- Start Register Form -->
-            <form action="">
-                <input type="text" placeholder="Username">
-
-                <input type="email" placeholder="Email">
-
-                <input type="password" placeholder="Password">
-
-                <input type="password" placeholder="Repeat Password">
+            <form method="POST" action="{% url 'register user' %}">
+                {% csrf_token %}
+                {{ form.username.errors }}
+                {{ form.username|placeholder:'Username' }}
+                {{ form.email.errors }}
+                {{ form.email|placeholder:'Email' }}
+                {{ form.password1.errors }}
+                {{ form.password1|placeholder:'Password' }}
+                {{ form.password2.errors }}
+                {{ form.password2|placeholder:'Repeat password' }}
+{#                <input type="text" placeholder="Username">#}
+{##}
+{#                <input type="email" placeholder="Email">#}
+{##}
+{#                <input type="password" placeholder="Password">#}
+{##}
+{#                <input type="password" placeholder="Repeat Password">#}
 
                 <!-- Register Button -->
                 <button type="submit">Register</button>
+
             </form>
             <!-- End Register Form -->
 
