--- a/Python Web Framework/workshop/petstagram/templates/base.html
+++ b/Python Web Framework/workshop/petstagram/templates/base.html
@@ -67,6 +67,9 @@
                         <a href="{% url 'profile details' pk=1 %}">
                             <i>Profile</i>
                         </a>
+                        <a href="{% url 'logout user' %}">
+                            <i>Logout</i>
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -77,7 +80,7 @@
 
 <!-- Starts Main Section -->
 <main>
-
+    {{ request.user }}
     {% block content %}
     {% endblock %}
 
