--- a/Python Web Framework/workshop/petstagram/templates/accounts/login-page.html
+++ b/Python Web Framework/workshop/petstagram/templates/accounts/login-page.html
@@ -1,36 +1,24 @@
 {% extends 'base.html' %}
+{% load forms %}
 {% block content %}
 
-    <!-- Start Login Section-->
     <div class="login-register-div">
         <div class="login-register-box">
             <h1>Petstagram</h1>
 
-            <!-- Start Login Form-->
             <form action="{% url 'login user' %}" method="POST">
                 {% csrf_token %}
                 {{ form.username }}
                 {{ form.password }}
                 <input type="hidden" value="{{ next }}" name="next">
-{#                <p>#}
-{#                    <label for="id_username">Username:</label>#}
-{#                    <input type="text" placeholder="Username">#}
-{#                </p>#}
-{#                <p>#}
-{#                    <label for="id_password">Password:</label>#}
-{#                    <input type="password" placeholder="Password">#}
-{#                </p>#}
 
-                <!-- Login Button-->
                 <button type="submit">Log in</button>
             </form>
-            <!-- End Login Form -->
 
         </div>
         <div class="second-option">
 
-            <!-- Link to Register Page-->
-            <p>Don't have account? <a href="{% url 'register user' %}">Register</a></p>
+            <p>Don't have account? <a href="{% url 'register user' %}?next={{ next }}">Register</a></p>
         </div>
     </div>
     <!-- End Login Section-->
