--- a/Python Web Framework/workshop/petstagram/templates/accounts/register-page.html
+++ b/Python Web Framework/workshop/petstagram/templates/accounts/register-page.html
@@ -2,14 +2,12 @@
 {% load forms %}
 {% block content %}
 
-    <!-- Start Register Section -->
     <div class="login-register-div">
         <div class="login-register-box">
             <h1>Petstagram</h1>
 
-            <!-- Start Register Form -->
             <form method="POST" action="{% url 'register user' %}">
-                {% csrf_token %}
+
                 {{ form.username.errors }}
                 {{ form.username|placeholder:'Username' }}
                 {{ form.email.errors }}
@@ -18,27 +16,17 @@
                 {{ form.password1|placeholder:'Password' }}
                 {{ form.password2.errors }}
                 {{ form.password2|placeholder:'Repeat password' }}
-{#                <input type="text" placeholder="Username">#}
-{##}
-{#                <input type="email" placeholder="Email">#}
-{##}
-{#                <input type="password" placeholder="Password">#}
-{##}
-{#                <input type="password" placeholder="Repeat Password">#}
-
-                <!-- Register Button -->
+                <input type="hidden" name="next" value="{{ next }}">
                 <button type="submit">Register</button>
+                {% csrf_token %}
 
             </form>
-            <!-- End Register Form -->
 
         </div>
         <div class="second-option">
 
-            <!-- Link to Login Page -->
-            <p>Have an account? <a href="#">Log in</a></p>
+            <p>Have an account? <a href="{% url 'login user' %}">Log in</a></p>
         </div>
     </div>
-    <!-- End Register Section -->
 
 {% endblock %}
