--- a/Python Web Framework/workshop/petstagram/templates/base.html
+++ b/Python Web Framework/workshop/petstagram/templates/base.html
@@ -32,45 +32,42 @@
 
             <div class="nav-links">
                 <ul class="nav-group">
-                    <li class="nav-item">
 
-                        <!-- Link to Add Pet Page -->
+                    <li class="nav-item">
                         <a href="{% url 'pet add' %}">
                             <i>Add Pet</i>
                         </a>
                     </li>
                     <li class="nav-item">
-
-                        <!-- Link to Add Photo Page -->
                         <a href="{% url 'photo add' %}">
                             <i>Add Photo</i>
                         </a>
                     </li>
+                    {% if not request.user.is_authenticated %}
                     <li class="nav-item">
-
-                        <!-- Link to Login Page -->
                         <a href="{% url 'login user' %}">
                             <i>Login</i>
                         </a>
                     </li>
                     <li class="nav-item">
-
-                        <!-- Link to Register Page -->
                         <a href="{% url 'register user' %}">
                             <i>Register</i>
                         </a>
                     </li>
-
+                    {% else %}
                     <li class="nav-item">
-
-                        <!-- Link to Profile Page -->
-                        <a href="{% url 'profile details' pk=1 %}">
+                        <a href="{% url 'profile details' pk=request.user.pk %}">
                             <i>Profile</i>
                         </a>
+                    </li>
+
+                    <li class="nav-item">
                         <a href="{% url 'logout user' %}">
                             <i>Logout</i>
                         </a>
                     </li>
+                    {% endif %}
+
                 </ul>
             </div>
         </div>
@@ -80,7 +77,6 @@
 
 <!-- Starts Main Section -->
 <main>
-    {{ request.user }}
     {% block content %}
     {% endblock %}
 
