--- a/Python Web Framework/workshop/petstagram/templates/pets/pet-details-page.html
+++ b/Python Web Framework/workshop/petstagram/templates/pets/pet-details-page.html
@@ -18,6 +18,7 @@
                         <!-- Pet Name -->
                         <p>{{ pet.name }}</p>
                         <!-- Pet Edit Button -->
+                        {% if owner == request.user %}
                         <a href="{% url 'pet edit' 'username' pet.slug %}">
                             <img class="edit-img" src="{% static 'images/edit-pen-icon-6.jpg' %}" alt="edit button">
                         </a>
@@ -25,6 +26,7 @@
                         <a href="{% url 'pet delete' 'username' pet.slug %}">
                             <img class="bin-img" src="{% static 'images/icon-remove-22.jpg' %}" alt="bin button">
                         </a>
+                        {% endif %}
                     </div>
                     <div class="data">
                         <!-- Pet Total Photos -->
