--- a/Python Web Framework/workshop/petstagram/templates/common/pets-photos.html
+++ b/Python Web Framework/workshop/petstagram/templates/common/pets-photos.html
@@ -9,20 +9,24 @@
         <div class="top">
             <div class="userDetails">
                 <!-- Link to User Profile Page -->
-                <a href="#">
+                <a href="{% url 'profile details' photo.user.pk %}">
                     <div class="profilepic">
                         <div class="profile_img">
                             <div class="image">
-                                <img src="{% static 'images/person.png' %}" alt="img8">
+                                {% if photo.user.profile_picture %}
+                                    <img src="{{ photo.user.profile_picture}}" alt="img8">
+                                {% else %}
+                                    <img src="{% static 'images/person.png' %}" alt="img8">
+                                {% endif %}
                             </div>
                         </div>
                     </div>
                 </a>
                 <h3>
                     <!-- Link to User Profile Page -->
-                    <a href="#">
+                    <a href="{% url 'profile details' photo.user.pk %}">
                         <!-- if user has first name and last name -->
-                        Diyan Kalaydzhiev
+                        {{ photo.user.full_name}}
                         <!-- else -->
                         <!-- show user username -->
                     </a>
@@ -50,7 +54,7 @@
                     <span class="heart">
                         <a href="{% url 'like' photo.id %}">
                             <!-- if user has liked the photo -->
-                            {% if photo.like_set.all %}
+                            {% if photo.id in all_liked_photos_by_request_user %}
                             <svg style="color: red"
                                  xmlns="http://www.w3.org/2000/svg"
                                  width="24"
@@ -121,7 +125,7 @@
             <!-- Start Tagged Pets -->
             <!-- Link to Tagged Pet Details Page-->
             {% for tagged_pet in photo.tagged_pets.all %}
-            <a href="{% url 'pet details' 'username' tagged_pet.slug %}">
+            <a href="{% url 'pet details' tagged_pet.user.username tagged_pet.slug %}">
                 <p class="message">
                     <b>{{ tagged_pet.name }}</b>
                 </p>
